--- a/etckeeper.conf
+++ b/etckeeper.conf
@@ -32,11 +32,11 @@ DARCS_COMMIT_OPTIONS="-a"
 #AVOID_COMMIT_BEFORE_INSTALL=1
 
 # The high-level package manager that's being used.
-# (apt, pacman, pacman-g2, yum, dnf, zypper, apk, xbps etc)
+# (apt, pacman, pacman-g2, yum, dnf, zypper, apk, xbps, emerge, cave, etc)
 HIGHLEVEL_PACKAGE_MANAGER=apt
 
 # The low-level package manager that's being used.
-# (dpkg, rpm, pacman, pacmatic, pacman-g2, apk, xbps etc)
+# (dpkg, rpm, pacman, pacmatic, pacman-g2, apk, xbps, cave, qlist, etc)
 LOWLEVEL_PACKAGE_MANAGER=dpkg
 
 # To push each commit to a remote, put the name of the remote here.
