Add support for multiple autocommit target dirs.

--- a/etckeeper.conf
+++ b/etckeeper.conf
@@ -43,3 +43,9 @@ LOWLEVEL_PACKAGE_MANAGER=pkgng
 # (eg, "origin" for git). Space-separated lists of multiple remotes
 # also work (eg, "origin gitlab github" for git).
 PUSH_REMOTE=""
+
+# Target directories for daily autocommit and pre/post-install hook
+# Space-separated lists of multiple remotes also work
+# (eg, "/etc /usr/local/etc" typically for FreeBSD).
+# Default is "/etc" only
+AUTOCOMMIT_DIRS="/etc /usr/local/etc"
